# service-health-incident-monitor

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy-render.yml  live-smoke.yml
alembic/: env.py
alembic/versions/: 001_initial_monitors_and_checks.py  002_monitor_states.py  003_status_pages.py  004_email_alerts.py  005_incidents.py
scripts/: docker-entrypoint.sh  smoke_backend.py  smoke_self_host.py  verify_postgres_migration.py
src/service_monitor/: __init__.py  app.py  auth.py  config.py  ssrf.py  state.py
src/service_monitor/api/public/: status.py
src/service_monitor/api/v1/: alert_settings.py  incidents.py  monitors.py  status_page.py
src/service_monitor/db/: __init__.py  engine.py  models.py  repositories.py
src/service_monitor/scheduler/: __init__.py
src/service_monitor/services/: alerts.py  check_runner.py  checks.py  fleet.py  incidents.py  monitor_transitions.py  public_demo.py  state.py  status_pages.py
src/service_monitor/static/: index.html
tests/: support.py  test_alerts.py  test_app.py  test_incidents.py  test_monitors.py  test_postgres_migrations.py  test_public_demo.py  test_scheduler_history.py  test_security.py  test_smoke_self_host.py  test_status_pages.py
