[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "service-health-incident-monitor"
version = "0.1.0"
description = "A FastAPI operational monitor with SLO calculations, incidents, and Prometheus-format metrics."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Mithulram Gunasekaran"}]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
test = ["httpx>=0.27,<1"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
